# Smart-switch-control-system-using-MQTT

./: .gitignore  Dai1.session.sql  README.md  sdkconfig
components/ssd1306/: ssd1306_i2c.c
main/: CMakeLists.txt  button_handler.c  button_handler.h  main.c  mqtt_manager.c  mqtt_manager.h  oled_display.c  oled_display.h  relay_control.c  relay_control.h  timer_control.c  timer_control.h  ultrasonic_sensor.c  ultrasonic_sensor.h  wifi_manager.c  wifi_manager.h
web/backend-server/: .env  package-lock.json  package.json  server.js
web/frontend/: auth.js  config.js  control.html  login.html  register.html  script.js  style.css
